--- a/arch/arm/configs/aicp_m7_defconfig
+++ b/arch/arm/configs/aicp_m7_defconfig
@@ -40,8 +40,8 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-teaMseven"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="Mysterious-test"
+# CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_HAVE_KERNEL_GZIP is not set
 # CONFIG_HAVE_KERNEL_LZMA is not set
 CONFIG_HAVE_KERNEL_XZ=y
@@ -2654,6 +2654,7 @@ CONFIG_BACKLIGHT_GENERIC=y
 # CONFIG_BACKLIGHT_LM3533 is not set
 # CONFIG_LOGO is not set
 CONFIG_SOUND=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 # CONFIG_SOUND_OSS_CORE is not set
 CONFIG_SND=y
 CONFIG_SND_TIMER=y
@@ -3654,6 +3655,8 @@ CONFIG_CRYPTO_DES=y
 # CONFIG_CRYPTO_TEA is not set
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_TWOFISH_COMMON=y
+CONFIG_CRYPTO_SHA1_ARM=y
+CONFIG_CRYPTO_AES_ARM=y
 
 #
 # Compression
