--- a/arch/arm/configs/aicp_m7_defconfig
+++ b/arch/arm/configs/aicp_m7_defconfig
@@ -40,7 +40,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="Mysterious-test"
+CONFIG_LOCALVERSION="-Mysterious-test"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_HAVE_KERNEL_GZIP is not set
 # CONFIG_HAVE_KERNEL_LZMA is not set
