--- a/arch/arm/configs/aicp_m7_defconfig
+++ b/arch/arm/configs/aicp_m7_defconfig
@@ -752,6 +752,7 @@ CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_ENRC2B is not set
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_PRIMOU is not set
 CONFIG_CPU_FREQ_GOV_SMARTMAX_M7=y
+CONFIG_GPU_OVERCLOCK=Y
 
 #
 # ARM CPU frequency scaling drivers
